# sqlearn

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CLAUDE.md  IDEAS.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  vulture_whitelist.py
.claude/: settings.json
.claude/agents/: doc-checker.md  sqlearn-reviewer.md  test-planner.md
.claude/skills/backlog/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/core/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/sqlglot/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/transformer/: SKILL.md
.github/workflows/: ci.yml  docs.yml
.zed/: settings.json
docs/: 01-overview.md  02-api-design.md  03-architecture.md  04-compiler.md  05-transformers.md  06-model-integration.md  07-analysis.md  08-export.md  09-error-handling.md  10-project-structure.md  11-business-model.md  12-milestones.md  13-testing.md  14-decisions.md  15-documentation.md  16-performance.md  getting-started.md  index.md
docs/api/: arithmetic.md  backend.md  cast.md  columns.md  compiler.md  concat.md  custom.md  datetime.md  deduplicate.md  errors.md  feature-selection.md  filter.md  frequency-encoder.md  hash-encoder.md  imputer.md  index.md  io.md  lookup.md  maxabs-scaler.md  merge.md  minmax-scaler.md  normalizer.md  onehot-encoder.md  operators.md  ordinal-encoder.md  outlier-handler.md  pipeline.md  rename.md  robust-scaler.md  sample.md  schema.md  selectors.md  standard-scaler.md  string.md  target-transform.md  transformer.md  union.md  window.md
docs/guide/: column-routing.md  compiler.md  concepts.md  custom-transformers.md  design-decisions.md  index.md
docs/includes/: abbreviations.md
docs/superpowers/plans/: 2026-03-14-compiler.md  2026-03-14-schema.md  2026-03-14-transformer.md  2026-03-15-pipeline.md
docs/superpowers/specs/: 2026-03-14-compiler-design.md  2026-03-14-schema-design.md  2026-03-14-transformer-design.md  2026-03-15-custom-transformers-design.md  2026-03-15-integration-tests-design.md  2026-03-15-pipeline-design.md
docs/tutorials/: basic-pipeline.md  custom-transformers.md  index.md  sklearn-comparison.md
src/sqlearn/: __init__.py  custom.py
src/sqlearn/core/: __init__.py  backend.py  columns.py  compiler.py  errors.py  io.py  pipeline.py  schema.py  transformer.py  union.py
src/sqlearn/data/: __init__.py  concat.py  lookup.py  merge.py
src/sqlearn/encoders/: __init__.py  frequency.py  hash.py  onehot.py  ordinal.py
src/sqlearn/feature_selection/: __init__.py  correlated.py  drop.py  kbest.py  variance.py
src/sqlearn/features/: __init__.py  arithmetic.py  datetime.py  outlier.py  string.py  target.py  window.py
src/sqlearn/imputers/: __init__.py  imputer.py
src/sqlearn/ops/: __init__.py  cast.py  deduplicate.py  filter.py  rename.py  sample.py
src/sqlearn/scalers/: __init__.py  maxabs.py  minmax.py  normalizer.py  robust.py  standard.py
tests/: conftest.py  test_custom.py  test_init.py
tests/core/: test_backend.py  test_columns.py  test_compiler.py  test_errors.py  test_io.py  test_pipeline.py  test_schema.py  test_transformer.py  test_union.py
tests/data/: test_concat.py  test_lookup.py  test_merge.py
tests/encoders/: test_frequency.py  test_hash.py  test_onehot.py  test_ordinal.py
tests/feature_selection/: test_correlated.py  test_drop.py  test_kbest.py  test_variance.py
tests/features/: test_arithmetic.py  test_datetime.py  test_outlier.py  test_string.py  test_target.py  test_window.py
tests/imputers/: test_imputer.py
tests/integration/: test_pipeline_transformers.py  test_sklearn_equivalence.py  test_sql_ast.py  test_sql_snapshots.py
tests/integration/snapshots/: composition.sql  full_pipeline.sql  imputer_auto.sql  imputer_mean.sql  onehot_encoder.sql  standard_scaler.sql
tests/ops/: test_cast.py  test_deduplicate.py  test_filter.py  test_rename.py  test_sample.py
tests/scalers/: test_maxabs.py  test_minmax.py  test_normalizer.py  test_robust.py  test_standard.py
